--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
-	<title>Ronaldo - Free Bootstrap 4 Template by Colorlib</title>
-	<meta charset="utf-8">
+	<title>Navneet Bajpai</title>
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-
-	<link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	
+    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -65,10 +66,11 @@
 		</div>
 		<div class="mouse">
 			<a href="#" class="mouse-icon">
-				<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
+				<div class="mouse-wheel"><i class="fa fa-arrow-down"></i></div>
 			</a>
 		</div>
 	</section>
+    
 
 	<section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
 		<div class="container">
@@ -92,7 +94,7 @@
 								<li class="d-flex"><span>Name:</span> <span>Navneet Bajpai</span></li>
 								<li class="d-flex"><span>Date of birth:</span> <span>December 05, 1999</span></li>
 								<li class="d-flex"><span>Address:</span> <span>Bhopal 462021 Madhya Pradesh</span></li>
-								<li class="d-flex"><span>Email:</span> <span>navneetbajpai1999@gmail.com</span></li>
+								<li class="d-flex"><span>Email:</span> <span style="font-size: 81%;">navneetbajpai1999@gmail.com</span></li>
 								<li class="d-flex"><span>Phone: </span> <span>+91-9171441052</span></li>
 							</ul>
 						</div>
@@ -132,7 +134,7 @@
 						<h2 class="heading">Education</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
+								<i style="color: white" class="fa fa-university"></i>
 							</div>
 							<div class="text pl-3">
 								<span class="date">2017-present</span>
@@ -143,7 +145,7 @@
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
+								<i style="color: white" class="fa fa-graduation-cap"></i>
 							</div>
 							<div class="text pl-3">
 								<span class="date">2016-2017</span>
@@ -154,7 +156,7 @@
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
+								<i style="color: white" class="fa fa-graduation-cap"></i>
 							</div>
 							<div class="text pl-3">
 								<span class="date">2014-2015</span>
@@ -182,7 +184,7 @@
 						<h2 class="heading">Experience</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
+								<i style="color: white" class="fa fa-code"></i>
 							</div>
 							<div class="text pl-3">
 								<span class="date">Apr 2020 - May 2020</span>
@@ -195,7 +197,7 @@
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
+								<i style="color: white" class="fa fa-pencil-square-o"></i>
 							</div>
 							<div class="text pl-3">
 								<span class="date">Aug 2019 - Oct 2019</span>
@@ -475,7 +477,7 @@
 						<h2 class="heading">Acheivements</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
+								<i style="color: white" class="fa fa-star-o"></i>
 							</div>
 							<div class="text pl-3">
 								<span class="date">Aug 2019 - July 2020</span>
@@ -486,7 +488,7 @@
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
+								<i style="color: white" class="fa fa-trophy"></i>
 							</div>
 							<div class="text pl-3">
 								<span class="date">2017</span>
@@ -497,7 +499,7 @@
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
+								<i style="color: white" class="fa fa-shield"></i>
 							</div>
 							<div class="text pl-3">
 								<span class="date">2018-2019</span>
@@ -508,7 +510,7 @@
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
+								<i style="color: white" class="fa fa-shield"></i>
 							</div>
 							<div class="text pl-3">
 								<span class="date">2017</span>
@@ -717,17 +719,17 @@
 				<div class="col-md-6 order-md-last d-flex">
 					<form action="contact.php" method="post" class="bg-light p-4 p-md-5 contact-form">
 						<div class="form-group">
-							<input type="text" class="form-control" name="name" placeholder="Your Name">
+							<input type="text" class="form-control" name="name" placeholder="Your Name" required>
 						</div>
 						<div class="form-group">
-							<input type="text" class="form-control" name="email" placeholder="Your Email">
+							<input type="text" class="form-control" name="email" placeholder="Your Email" required>
 						</div>
 						<div class="form-group">
-							<input type="text" class="form-control" name="subject" placeholder="Subject">
+							<input type="text" class="form-control" name="subject" placeholder="Subject" required>
 						</div>
 						<div class="form-group">
 							<textarea name="message" id="" cols="30" rows="7" class="form-control"
-								placeholder="Message"></textarea>
+								placeholder="Message" required></textarea>
 						</div>
 						<div class="form-group">
 							<input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
@@ -750,8 +752,7 @@
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">About</h2>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-							there live the blind texts.</p>
+						<p>Seeking for an opportunity to leverage my knowledge and skills while making a significant contribution to the success of the company.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a
 									href="https://www.linkedin.com/in/navneet-bajpai-a5bb16160"><span
@@ -817,9 +818,7 @@
 					<p>
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 						Copyright &copy;
-						<script>document.write(new Date().getFullYear());</script> All rights reserved | This template
-						is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a
-							href="https://colorlib.com" target="_blank">Colorlib</a>
+						<script>document.write(new Date().getFullYear());</script> All rights reserved | Navneet Bajpai
 						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 					</p>
 				</div>
